--- a/src/main/resources/com/matteotocci/app/ModificaPassword.fxml
+++ b/src/main/resources/com/matteotocci/app/ModificaPassword.fxml
@@ -1,44 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="modificaPasswordRoot" prefHeight="350.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.ModificaPassword">
+<AnchorPane prefHeight="350.0" prefWidth="170.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.ModificaPassword">
     <children>
-        <VBox layoutX="0.0" layoutY="0.0" prefHeight="350.0" prefWidth="180.0" style="-fx-background-color: #f0f0f0;">
+        <VBox layoutY="0.0" prefHeight="350.0" prefWidth="700.0" style="-fx-padding: 20;">
             <children>
-                <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="180.0" style="-fx-padding: 10;">
+                <HBox alignment="CENTER_LEFT" prefHeight="109.0" prefWidth="660.0" spacing="15.0">
                     <children>
-                        <ImageView fx:id="profileImageLeft" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@immagini/omino_profilo.jpg" />
-                            </image>
-                        </ImageView>
-                        <Label fx:id="nomeUtenteSidebarLabelLeft" style="-fx-padding: 0 0 0 10; -fx-font-size: 14px;" text="Nome Utente" />
-                    </children>
-                </HBox>
-                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="60.0" prefWidth="180.0" style="-fx-cursor: hand;" text="Home Page" />
-                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="65.0" prefWidth="180.0" style="-fx-cursor: hand;" text="Ricette" />
-                <Button fx:id="BottonePianoAlimentareLeft" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="70.0" prefWidth="180.0" style="-fx-cursor: hand;" text="Piano Alimentare" />
-                <Button fx:id="BottoneAlimentiLeft" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="70.0" prefWidth="180.0" style="-fx-cursor: hand;" text="Alimenti" />
-            </children>
-        </VBox>
-        <VBox layoutX="180.0" layoutY="0.0" prefHeight="350.0" prefWidth="520.0" style="-fx-padding: 20;">
-            <children>
-                <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="520.0" spacing="15.0">
-                    <children>
-                        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="71.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@immagini/logo.jpg" />
                             </image>
@@ -53,21 +36,33 @@
                     <children>
                         <GridPane hgap="10.0" vgap="10.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="250.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="198.60001220703126" minWidth="10.0" prefWidth="127.4" />
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="379.40000000000003" minWidth="10.0" prefWidth="280.8000183105469" />
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="210.80001831054688" minWidth="50.0" prefWidth="205.19998168945312" />
                             </columnConstraints>
                             <children>
                                 <Label style="-fx-font-weight: bold;" text="Vecchia Password:" GridPane.rowIndex="0" />
-                                <PasswordField fx:id="vecchiaPasswordField" promptText="Inserisci la vecchia password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                                <PasswordField fx:id="vecchiaPasswordField" prefHeight="35.0" prefWidth="383.0" promptText="Inserisci la vecchia password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="0" />
                                 <Label style="-fx-font-weight: bold;" text="Nuova Password:" GridPane.rowIndex="1" />
                                 <PasswordField fx:id="nuovaPasswordField" promptText="Inserisci la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                 <Label style="-fx-font-weight: bold;" text="Conferma Password:" GridPane.rowIndex="2" />
                                 <PasswordField fx:id="confermaPasswordField" promptText="Conferma la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <CheckBox fx:id="mostraVecchiaPasswordCheckBox" mnemonicParsing="false" onAction="#mostraNascondiVecchiaPassword" text="Mostra" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+                                <CheckBox fx:id="mostraNuovaPasswordCheckBox" mnemonicParsing="false" onAction="#mostraNascondiNuovaPassword" text="Mostra" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                                <CheckBox fx:id="mostraConfermaPasswordCheckBox" mnemonicParsing="false" onAction="#mostraNascondiConfermaPassword" text="Mostra" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                                <TextField fx:id="vecchiaPasswordFieldVisible" managed="false" promptText="Inserisci la vecchia password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                                <TextField fx:id="nuovaPasswordFieldVisible" managed="false" promptText="Inserisci la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <TextField fx:id="confermaPasswordFieldVisible" managed="false" promptText="Conferma la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                             </children>
+                            <rowConstraints>
+                                <RowConstraints />
+                                <RowConstraints />
+                                <RowConstraints />
+                            </rowConstraints>
                         </GridPane>
-                        <HBox alignment="BOTTOM_RIGHT">
+                        <HBox alignment="BOTTOM_RIGHT" prefHeight="78.0" prefWidth="660.0">
                             <children>
-                                <Button fx:id="salvaPasswordButton" style="-fx-background-color: #008CBA; -fx-text-fill: white; -fx-padding: 10 20; -fx-font-weight: bold; -fx-border-radius: 5; -fx-cursor: hand; -fx-font-size: 14px;" text="Salva Nuova Password" onMouseClicked="#salvaNuovaPassword" />
+                                <Button onMouseClicked="#salvaNuovaPassword" style="-fx-background-color: #008CBA; -fx-text-fill: white; -fx-padding: 10 20; -fx-font-weight: bold; -fx-border-radius: 5; -fx-cursor: hand; -fx-font-size: 14px;" text="Salva Nuova Password" />
                             </children>
                         </HBox>
                     </children>
