--- a/src/main/resources/com/matteotocci/app/PaginaProfilo.fxml
+++ b/src/main/resources/com/matteotocci/app/PaginaProfilo.fxml
@@ -6,20 +6,20 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="500.0" prefWidth="900.0" stylesheets="@css/stile_PaginaProfilo.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.PaginaProfilo">
-    <children>
-        <VBox layoutX="0.0" layoutY="0.0" prefHeight="500.0" prefWidth="180.0" style="-fx-background-color: #f0f0f0;">
+<BorderPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.PaginaProfilo">
+    <left>
+        <VBox prefWidth="180.0" style="-fx-background-color: #f0f0f0;" BorderPane.alignment="CENTER">
             <children>
-                <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="180.0" style="-fx-padding: 10;">
+                <HBox alignment="CENTER_LEFT" prefHeight="60.0" style="-fx-padding: 10;">
                     <children>
-                        <ImageView fx:id="profileImage" fitHeight="60.0" fitWidth="60.0" onMouseClicked="#AccessoProfilo" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="profileImage" fitHeight="40.0" fitWidth="40.0" onMouseClicked="#AccessoProfilo" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@immagini/omino_profilo.jpg" />
                             </image>
@@ -27,14 +27,17 @@
                         <Label fx:id="nomeUtenteSidebarLabel" style="-fx-padding: 0 0 0 10; -fx-font-size: 14px;" text="Nome Utente" />
                     </children>
                 </HBox>
-                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="60.0" prefWidth="180.0" style="-fx-cursor: hand;" text="Dashboard" />
-                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="65.0" prefWidth="180.0" style="-fx-cursor: hand;" text="Impostazioni" />
-                <Button fx:id="BottoneAlimenti" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoAlimenti" prefHeight="70.0" prefWidth="180.0" style="-fx-cursor: hand;" text="Alimenti" />
+                <Button fx:id="homePageButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="60.0" style="-fx-cursor: hand;" text="Home Page" onAction="#vaiAllaHomePage" />
+                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="65.0" style="-fx-cursor: hand;" text="Ricette" />
+                <Button fx:id="BottoneAlimenti1" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoAlimenti" prefHeight="70.0" style="-fx-cursor: hand;" text="Piano alimentare" />
+                <Button fx:id="BottoneAlimenti" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoAlimenti" prefHeight="70.0" style="-fx-cursor: hand;" text="Alimenti" />
             </children>
         </VBox>
-        <VBox layoutX="180.0" prefHeight="500.0" prefWidth="720.0" style="-fx-padding: 20;">
+    </left>
+    <center>
+        <VBox style="-fx-padding: 20;" BorderPane.alignment="CENTER">
             <children>
-                <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="720.0" spacing="15.0">
+                <HBox alignment="CENTER_LEFT" spacing="15.0">
                     <children>
                         <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -50,56 +53,59 @@
                 <VBox spacing="15.0" VBox.vgrow="ALWAYS">
                     <children>
                         <Label style="-fx-text-fill: #2196F3; -fx-underline: true; -fx-font-size: 16px; -fx-font-weight: bold;" text="Modifica il tuo profilo" />
-                        <GridPane hgap="5.0" vgap="8.0">
+                        <GridPane hgap="8.0" vgap="8.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="287.6000122070312" minWidth="10.0" prefWidth="130.00003662109373" />
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="544.3999633789062" minWidth="10.0" prefWidth="544.3999633789062" />
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="100.0" prefWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="150.0" prefWidth="200.0" />
                             </columnConstraints>
                             <children>
-                                <Label style="-fx-font-weight: bold;" text="Nome:" GridPane.rowIndex="0" />
-                                <TextField fx:id="nomeTextField" prefHeight="35.0" prefWidth="564.0" promptText="Inserisci il nome" style="-fx-border-color: transparent; -fx-background-color: transparent; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="0" editable="false" focusTraversable="false" />
-                                <Label style="-fx-font-weight: bold;" text="Cognome:" GridPane.rowIndex="1" />
-                                <TextField fx:id="cognomeTextField" promptText="Inserisci il cognome" style="-fx-border-color: transparent; -fx-background-color: transparent; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="1" editable="false" focusTraversable="false" />
-                                <Label style="-fx-font-weight: bold;" text="Sesso:" GridPane.rowIndex="2" />
-                                <TextField promptText="Inserisci il sesso" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                <Label style="-fx-font-weight: bold;" text="Data Nascita:" GridPane.rowIndex="3" />
-                                <TextField promptText="GG/MM/AAAA" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                <Label style="-fx-font-weight: bold;" text="Altezza (cm):" GridPane.rowIndex="4" />
-                                <TextField promptText="Inserisci l'altezza in cm" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                                <Label style="-fx-font-weight: bold;" text="Peso Attuale (kg):" GridPane.rowIndex="5" />
-                                <TextField promptText="Inserisci il peso attuale in kg" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                                <Label style="-fx-font-weight: bold;" text="Peso Ideale (kg):" GridPane.rowIndex="6" />
-                                <TextField promptText="Inserisci il peso ideale in kg" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                                <Label style="-fx-font-weight: bold;" text="Dieta:" GridPane.rowIndex="7" />
-                                <TextField promptText="Inserisci il nome della dieta" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Nome:" GridPane.rowIndex="0" />
+                                <TextField fx:id="nomeTextField" editable="false" prefHeight="28.0" promptText="Inserisci il nome" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Cognome:" GridPane.rowIndex="1" />
+                                <TextField fx:id="cognomeTextField" editable="false" prefHeight="28.0" promptText="Inserisci il cognome" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Sesso:" GridPane.rowIndex="2" />
+                                <TextField prefHeight="28.0" promptText="Inserisci il sesso" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Data Nascita:" GridPane.rowIndex="3" />
+                                <TextField prefHeight="28.0" promptText="GG/MM/AAAA" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Altezza (cm):" GridPane.rowIndex="4" />
+                                <TextField prefHeight="28.0" promptText="Inserisci l'altezza in cm" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Peso Attuale (kg):" GridPane.rowIndex="5" />
+                                <TextField prefHeight="28.0" promptText="Inserisci il peso attuale in kg" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Peso Ideale (kg):" GridPane.rowIndex="6" />
+                                <TextField prefHeight="28.0" promptText="Inserisci il peso ideale in kg" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Dieta:" GridPane.rowIndex="7" />
+                                <TextField prefHeight="28.0" promptText="Inserisci il nome della dieta" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Livello attività:" GridPane.rowIndex="8" />
+                                <TextField prefHeight="28.0" promptText="Inserisci il tuo tipo di attività" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                                <Label style="-fx-font-weight: bold; -fx-font-size: 13px;" text="Nutrizionista:" GridPane.rowIndex="9" />
+                                <TextField prefHeight="28.0" promptText="Scegli il tuo nutrizionista" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 5; -fx-font-size: 13px;" GridPane.columnIndex="1" GridPane.rowIndex="9" />
                             </children>
                             <padding>
-                                <Insets bottom="15.0" top="10.0" />
+                                <Insets bottom="10.0" top="8.0" />
                             </padding>
                             <rowConstraints>
-                                <RowConstraints />
-                                <RowConstraints />
-                                <RowConstraints />
-                                <RowConstraints />
-                                <RowConstraints />
-                                <RowConstraints />
-                                <RowConstraints />
-                                <RowConstraints />
+                                <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="33.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                         </GridPane>
                         <Label onMouseClicked="#mostraSchermataModificaPassword" style="-fx-text-fill: #007bff; -fx-underline: true; -fx-font-size: 14px; -fx-cursor: hand;" text="Modifica Password" />
-                        <HBox alignment="BOTTOM_RIGHT" spacing="15.0" VBox.vgrow="NEVER">
+                        <HBox alignment="BOTTOM_RIGHT" spacing="15.0">
                             <children>
-                                <Button style="-fx-background-color: #28a745; -fx-text-fill: white; -fx-padding: 10 20; -fx-font-weight: bold; -fx-border-radius: 5; -fx-cursor: hand; -fx-font-size: 14px;" text="Salva Modifiche">
-                                    <padding>
-                                        <Insets top="15.0" />
-                                    </padding>
-                                </Button>
+                                <Button fx:id="LogoutButton" mnemonicParsing="false" prefHeight="40.0" style="-fx-background-color: #dc3545; -fx-text-fill: white; -fx-padding: 10 20; -fx-font-weight: bold; -fx-border-radius: 5; -fx-cursor: hand; -fx-font-size: 14px;" text="Logout" onAction="#eseguiLogout" />
+                                <Button prefHeight="40.0" style="-fx-background-color: #28a745; -fx-text-fill: white; -fx-padding: 10 20; -fx-font-weight: bold; -fx-border-radius: 5; -fx-cursor: hand; -fx-font-size: 14px;" text="Salva Modifiche" />
                             </children>
                         </HBox>
                     </children>
                 </VBox>
             </children>
         </VBox>
-    </children>
-</AnchorPane>
+    </center>
+</BorderPane>
