--- a/src/main/resources/com/matteotocci/app/HomePage.fxml
+++ b/src/main/resources/com/matteotocci/app/HomePage.fxml
@@ -11,15 +11,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TableColumn?>
 
 <AnchorPane prefHeight="500.0" prefWidth="1000.0" stylesheets="@css/stile_HomePage.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.HomePage">
    <children>
-      <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox prefHeight="578.0" prefWidth="180.0">
+            <VBox prefWidth="180.0" VBox.vgrow="ALWAYS">
                <children>
                   <HBox prefHeight="75.0" prefWidth="180.0">
                      <children>
@@ -31,21 +28,21 @@
                         <Label fx:id="nomeUtenteLabelHomePage" prefHeight="74.0" prefWidth="114.0" text="Nome e Cognome" />
                      </children>
                   </HBox>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="75.0" prefWidth="180.0" text="Home Page" />
-                  <Button fx:id="BottoneRicette" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoRicette" prefHeight="75.0" prefWidth="180.0" text="Ricette" />
-                  <Button mnemonicParsing="false" prefHeight="75.0" prefWidth="180.0" text="Piano Alimentare" />
-                  <Button fx:id="BottoneAlimenti" mnemonicParsing="false" onAction="#AccessoAlimenti" prefHeight="75.0" prefWidth="180.0" text="Alimenti">
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="75.0" prefWidth="180.0" text="Home Page" VBox.vgrow="NEVER" />
+                  <Button fx:id="BottoneRicette" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoRicette" prefHeight="75.0" prefWidth="180.0" text="Ricette" VBox.vgrow="NEVER" />
+                  <Button mnemonicParsing="false" prefHeight="75.0" prefWidth="180.0" text="Piano Alimentare" VBox.vgrow="NEVER" />
+                  <Button fx:id="BottoneAlimenti" mnemonicParsing="false" onAction="#AccessoAlimenti" prefHeight="75.0" prefWidth="180.0" text="Alimenti" VBox.vgrow="ALWAYS">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
                </children>
             </VBox>
-            <VBox maxWidth="1.7976931348623157E308" prefHeight="500.0" prefWidth="833.0">
+            <VBox HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                <children>
-                  <HBox prefHeight="152.0" prefWidth="743.0">
+                  <HBox prefHeight="152.0" HBox.hgrow="ALWAYS" VBox.vgrow="NEVER">
                      <children>
-                        <StackPane prefHeight="150.0" prefWidth="200.0">
+                        <StackPane prefHeight="150.0" prefWidth="200.0" HBox.hgrow="NEVER">
                            <children>
                               <Circle fill="DODGERBLUE" radius="42.0" stroke="BLACK" strokeType="INSIDE" styleClass="cerchio" />
                               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
@@ -64,14 +61,14 @@
                               </VBox>
                            </children>
                         </StackPane>
-                        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="548.0">
+                        <VBox HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                            <children>
-                              <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="59.0" prefWidth="546.0" text="MACRONUTRIENTI">
+                              <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="59.0" text="MACRONUTRIENTI">
                                  <font>
                                     <Font size="20.0" />
                                  </font>
                               </Label>
-                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+                              <HBox alignment="CENTER" spacing="20.0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                                  <children>
                                     <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                                        <children>
@@ -155,73 +152,69 @@
                         </VBox>
                      </children>
                   </HBox>
-                  <VBox prefHeight="381.0" prefWidth="743.0">
+                  <HBox HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                      <children>
-                        <HBox prefHeight="194.0" prefWidth="743.0">
+                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                            <children>
-                              <HBox alignment="CENTER" prefHeight="194.0" prefWidth="743.0">
+                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                                  <children>
-                                    <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <Label text="Colazione" />
-                                          <Label text="0/100kcal" />
-                                       </children>
-                                    </VBox>
-                                    <Button mnemonicParsing="false" styleClass="bottone" text="+" />
+                                    <Label text="Colazione" />
+                                    <Label text="0/100kcal" />
                                  </children>
-                              </HBox>
-                              <HBox alignment="CENTER" prefHeight="194.0" prefWidth="743.0">
-                                 <children>
-                                    <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <Label text="Spuntino" />
-                                          <Label text="0/100kcal" />
-                                       </children>
-                                    </VBox>
-                                    <Button mnemonicParsing="false" styleClass="bottone" text="+" />
-                                 </children>
-                              </HBox>
-                              <HBox alignment="CENTER" prefHeight="194.0" prefWidth="743.0">
-                                 <children>
-                                    <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <Label text="Pranzo" />
-                                          <Label text="0/100kcal" />
-                                       </children>
-                                    </VBox>
-                                    <Button mnemonicParsing="false" styleClass="bottone" text="+" />
-                                 </children>
-                              </HBox>
+                              </VBox>
+                              <Button mnemonicParsing="false" styleClass="bottone" text="+" />
                            </children>
                         </HBox>
-                        <HBox prefHeight="190.0" prefWidth="743.0">
+                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                            <children>
-                              <HBox alignment="CENTER" prefHeight="194.0" prefWidth="743.0">
+                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                                  <children>
-                                    <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <Label text="Merenda" />
-                                          <Label text="0/100kcal" />
-                                       </children>
-                                    </VBox>
-                                    <Button mnemonicParsing="false" styleClass="bottone" text="+" />
+                                    <Label text="Spuntino" />
+                                    <Label text="0/100kcal" />
                                  </children>
-                              </HBox>
-                              <HBox alignment="CENTER" prefHeight="194.0" prefWidth="743.0">
+                              </VBox>
+                              <Button mnemonicParsing="false" styleClass="bottone" text="+" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+                           <children>
+                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                                  <children>
-                                    <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <Label text="Cena" />
-                                          <Label text="0/100kcal" />
-                                       </children>
-                                    </VBox>
-                                    <Button mnemonicParsing="false" styleClass="bottone" text="+" />
+                                    <Label text="Pranzo" />
+                                    <Label text="0/100kcal" />
                                  </children>
-                              </HBox>
+                              </VBox>
+                              <Button mnemonicParsing="false" styleClass="bottone" text="+" />
                            </children>
                         </HBox>
                      </children>
-                  </VBox>
+                  </HBox>
+                  <HBox HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+                     <children>
+                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+                           <children>
+                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                                 <children>
+                                    <Label text="Merenda" />
+                                    <Label text="0/100kcal" />
+                                 </children>
+                              </VBox>
+                              <Button mnemonicParsing="false" styleClass="bottone" text="+" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+                           <children>
+                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                                 <children>
+                                    <Label text="Cena" />
+                                    <Label text="0/100kcal" />
+                                 </children>
+                              </VBox>
+                              <Button mnemonicParsing="false" styleClass="bottone" text="+" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </HBox>
                </children>
             </VBox>
          </children>
