--- a/src/main/resources/com/matteotocci/app/css/stile_HomePage.css
+++ b/src/main/resources/com/matteotocci/app/css/stile_HomePage.css
@@ -271,4 +271,5 @@
 
 #nomeUtenteLabelDieta {
     -fx-min-width: 150px; /* Prova con una larghezza minima (modifica il valore se necessario) */
-}}
+}
+
